# Holistic-Model-Predictive-Control-for-Mobile-Manipulation

./: .gitignore  .gitignore.save  README.md  requirements.txt
src/hmpc_python/: MPCPlanner.py  collision_detection.py  data.csv  distance_count.py  distance_count_new.py  distance_count_np.py  distance_count_np_new.py  fcl_try._v2py  fcl_try.py  fcl_try1.py  fcl_try_v2.py  fk_generator.py  hmpc_planner_task1_v1.py  hmpc_planner_task1_v2.py  hmpc_planner_task2.py  hmpc_planner_task3.py  hmpc_planner_task3_compare.py  imgui.ini  moveit_hmpc_planner_task1_v1.py  moveit_hmpc_planner_task1_v2.py  moveit_hmpc_planner_task2.py  moveit_hmpc_planner_task3.py  moveit_hmpc_planner_task3_compare.py  moveit_listener.py  moveit_mpc_planner.py  moveit_mpc_planner_v1.py  moveit_mpc_planner_v10.py  moveit_mpc_planner_v11.py  moveit_mpc_planner_v12.py  moveit_mpc_planner_v13.py  moveit_mpc_planner_v14.py  moveit_mpc_planner_v15.py  moveit_mpc_planner_v16.py  moveit_mpc_planner_v17.py  moveit_mpc_planner_v18.py  moveit_mpc_planner_v19.py  moveit_mpc_planner_v2.py  moveit_mpc_planner_v20.py  moveit_mpc_planner_v21.py  moveit_mpc_planner_v22.py  (+56 more)
src/hmpc_python/Camera/Data/: 041120220204.mvdat
src/hmpc_python/output/: mpc_last_30_steps.xlsx  trajectory_data1.pkl  trajectory_data1_v2.pkl  trajectory_data2.pkl  trajectory_data2_v2.pkl  trajectory_data3_v2.pkl  trajectory_data3（复件）.pkl
src/mybot/: CMakeLists.txt
src/mybot/config/: move_group.rviz  ompl_planning.yaml  param.yaml  robot_arm_description.srdf  ros2_controllers.yaml
src/mybot/launch/: BFMTk_base.launch.py  BFPIECE_base.launch.py  BiEST_base.launch.py  BiTRRT_base.launch.py  PRMstar_base.launch.py  SPARStwo_base.launch.py  arm_execute_trajectory.py  hmpc_demo.launch.py  lerp_demo.launch(复件).py  lerp_demo.launch.py  move_group_demo.launch.py  move_group_v2.launch.py  rrt_base.launch.py  task1_hmpc.launch.py  task2_hmpc.launch.py  task3_PRMstar.launch.py  task3_compare.launch.py  task3_dynamic.launch.py  task3_hmpc.launch.py
src/mybot/src/: BFMTk_base.cpp  BFPIECE_base.cpp  BiEST_base.cpp  BiTRRT_base.cpp  Communication.cpp  Communication.h  PRMstar_base.cpp  SPARStwo_base.cpp  arm_control.cpp  arm_control.h  arm_execute_total_trajectory.cpp  arm_execute_total_trajectory_final.cpp  dynamic_grasping.cpp  move_trajectory_buffer.cpp  mpc_based_dynamic.cpp  mpc_based_test.cpp  rrt_base.cpp  rrt_base_v0.cpp  rrt_base_v1.cpp  task1_hmpc.cpp  task2_hmpc.cpp  task3_BiTRRT.cpp  task3_compare.cpp  task3_hmpc.cpp  task4_hmpc.cpp  trajectory_buffer.cpp
src/mybot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/mybot_moveit_config/config/: chomp_planning.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  param.yaml  robot_arm_description.ros2_control.xacro  robot_arm_description.srdf
src/pose_publisher/: CMakeLists.txt
src/pose_publisher/launch/: pose_comm.launch.py
src/pose_publisher/src/: pose_publisher.cpp  pose_publisher_dynamic.cpp  pose_publisher_task1.cpp  pose_publisher_task1_random.cpp  pose_publisher_task3.cpp  pose_publisher_task3_follow.cpp  pose_publisher_task3（复件）.cpp  pose_publisher（远端）.cpp
src/robot_arm_description/urdf/: robot_arm_description.urdf
src/spherical_decomposition/: READ_ME.md  final_confirm.py  final_main.py  final_main_v1.py  final_main_v2.py  final_main_v3.py  final_main_v4.py  final_main_v5.py  final_main_v7.py  final_main_v8.py  final_output_results.py  final_output_results_v1.py  final_output_results_v2.py  final_output_results_v3.py  final_output_results_v4.py  final_output_results_v5.py  final_output_results_v7(备份).py  final_output_results_v7.py  final_output_results_v8.py  final_save_old_step3.py  final_step_1_donot_run_this.py  final_step_2_confirm.py  final_step_3_combination_final.py  final_step_3_confirm.py  final_step_3_final.py  final_step_3_final_without_plot.py  final_symbolic_transform.py  final_symbolic_transform_v1.py  final_symbolic_transform_v2.py  final_symbolic_transform_v3.py  final_x_step_3_output_points.py  final_y_step_3_transform_points.py  final_z_step_3_output_matrix.py  final_zz_step_3_confirm.py  goal.py  link_spheres.json  link_spheres_relative.json  link_spheres_relative_v2(原始).json  link_spheres_relative_v2.json  main_task1_v1.py  (+16 more)
src/spherical_decomposition/pack/: final_step_1_confirm.py  final_step_2.py  final_step_3_combination_final.py  final_step_3_final.py  final_step_3_final_without_plot.py
